# HSEproject

./: CMakeLists.txt
data/: savePlaylists.csv  saveSongs.csv  songs_normalize (3).csv
source/Controller/: controller.cpp  controller.h
source/Entity/: playlist.cpp  playlist.h  trackInfo.cpp  trackInfo.h
source/Model/: CSVModel.cpp  CSVModel.h
source/Src/: main.cpp
source/View/: imagewidget.cpp  imagewidget.h  mainwindow.cpp  mainwindow.h  playlistDialog.cpp  playlistDialog.h  songInputDialog.cpp  songInputDialog.h
